--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,4 +39,6 @@
 		</div>
 	</div>
 </footer>
+<script src="https://apis.google.com/js/platform.js" defer></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="{{ '/assets/js/code.js' | relative_url }}" defer></script>
