--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -9,3 +9,7 @@
 .Subheader ul li {display:block; margin:0px 0px; padding:6px 0px; width:100%; }
 .Subheader ul li a{width:100%;margin-left:-15px;padding:7px 15px; display:block;}
 }
+
+.daily-report img {display:block; margin-left:auto; margin-right:auto; margin-top:30px; max-width: 100%;}
+.daily-report ul {list-style-type: none; margin:0; padding:0;}
+.daily-report ul li {margin-left:0px; padding:0px; width:100%;}
