--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,10 @@ layout:
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md">
+				<div class="col-md-3">
+					<div class="rte"><h2>Sidebar</h2></div>
+				</div>
+				<div class="col-md-9">
 					<div class="rte">{{ content }}</div>
 				</div>
 			</div>		
