--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
 		<div class="row">
 			<div class="col-md-3 col-sm-6 col-xs-6 vertical-center">
 				<div class="logo-wrapper">
-					<a href="{{ relative_url }}" class="logo-parent">
+					<a href="{{ site.url | relative_url }}" class="logo-parent">
 						<div class="logo">
 							<div></div>
 						</div>
