--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -13,3 +13,5 @@
 .daily-report img {display:block; margin-left:auto; margin-right:auto; margin-top:30px; max-width: 100%;}
 .daily-report ul {list-style-type: none; margin:0; padding:0;}
 .daily-report ul li {margin-left:0px; padding:0px; width:100%;}
+
+.Footer {margin-bottom: 20px;}
