--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -9,7 +9,13 @@
 .Subheader ul li {display:block; margin:0px 0px; padding:6px 0px; width:100%; }
 .Subheader ul li a{width:100%;margin-left:-15px;padding:7px 15px; display:block;}
 }
-
+/* Snippets */
+.report-list { width:100%;}
+.rte img{max-width:100%;}
+.list-group {padding-left: 0; margin-bottom: 20px;}
+.list--item { display:block; border-bottom:1px solid #dedede;}
+.post--date{ display:block;font-weight:400; font-size:14px; color:#000; margin-top:-20px;}
+.p--action { margin-top: 30px; margin-bottom: 30px; margin-left: 0px; margin-right: 0px; text-align:center!important;}
 .daily-report img {display:block; margin-left:auto; margin-right:auto; margin-top:30px; max-width: 100%;}
 .daily-report ul {list-style-type: none; margin:0; padding:0;}
 .daily-report ul li {margin-left:0px; padding:0px; width:100%;}
