--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -13,7 +13,7 @@
 .report-list { width:100%;}
 .rte img{max-width:100%;}
 .list-group {padding-left: 0; margin-bottom: 20px;}
-.list--item { display:block; border-bottom:1px solid #dedede;}
+.list--item { display:block; border-bottom:1px solid #dedede; padding: 20px 0;}
 .post--date{ display:block; font-weight:400; font-size:14px; color: #013365; margin-top:-10px;}
 .p--action { margin-top: 30px; margin-bottom: 30px; margin-left: 0px; margin-right: 0px; text-align:center!important;}
 .daily-report img {display:block; margin-left:auto; margin-right:auto; margin-top:30px; max-width: 100%;}
