--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
 						<div class="logo">
 							<div></div>
 						</div>
-						<div class="binary-logo-text hidden-xs-down">
+						<div class="binary-logo-text">
 							<div></div>
 						</div>
 					</a>
