--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="Footer">
-	<div class="Footer__socket">
+<footer class="Footer primary-color">
+	<div class="Footer__socket ">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-3">
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="Footer__info">
+	<div class="Footer__info primary-color-dark">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-9">
