--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -20,4 +20,4 @@
 .daily-report ul {list-style-type: none; margin:0; padding:0;}
 .daily-report ul li {margin-left:0px; padding:0px; width:100%;}
 
-.Footer {padding-bottom: 20px; color: #fff;}
+.Footer {padding: 20px 0; color: #fff;}
