--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -21,3 +21,5 @@
 .daily-report ul li {margin-left:0px; padding:0px; width:100%;}
 
 .Footer {padding: 20px 0; color: #fff;}
+.Footer__info {}
+.Footer__copyrights {margin-top: 20px;}
