--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -1,23 +1,27 @@
 ---
-layout: 
+layout: compress
 ---
 <!DOCTYPE html>
 {% include lang.html %}
 <html lang="{{ siteLang }}">
 {% include head.html %}    
     {% include header.html %}
-		<div class="container">
-			<div class="row">
-				<div class="col-md">
-				    {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
+	<main class="page-content" aria-label="Content" id="champion-container">
+		<div class="wrapper" id="champion-content">
+			<div class="container">
+				<div class="row">
+					<div class="col-md">
+						{% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
+					</div>
 				</div>
+				<div class="row">
+					<div class="col-md">
+						<div class="rte">{{ content }}</div>
+					</div>
+				</div>		
 			</div>
-			<div class="row">
-				<div class="col-md">
-					<div class="rte">{{ content }}</div>
-				</div>
-			</div>		
 		</div>
+	</main>	
      {% include footer.html %}  
     </body>
 </html>
