--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,106 +1,94 @@
 <footer id="footer" class="fx-footer primary-color content-inverse-color">
-<div id="footer-menu" class="">
-<div class="container">
-<div class="row">
-<div class="col-sm-10 col-xs-12">
-<div class="row">
-<div class="col-xs-6 col-md-3">
-<h4>ChampionFX</h4>
-<div class="separator-line-thin-gray"></div>
-<ul>
-<li><a href="/en/about-us.html">About</a></li>
-<li><a href="/en/licensing.html">License</a></li>
-</ul>
-<h4>Partnerships</h4>
-<div class="separator-line-thin-gray"></div>
-<ul>
-<li><a href="/en/partnerships-ib.html">Introducing Broker (IB)</a></li>
-<li><a href="/en/partnerships-affiliate.html">Affiliate</a></li>
-<li><a href="/en/partnerships-contributor.html">Content Contributor</a></li>
-</ul>
-</div>
-<div class="col-xs-6 col-md-3">
-<h4>MT5</h4>
-<div class="separator-line-thin-gray"></div>
-<ul>
-<li><a href="/en/forex.html">Forex</a></li>
-<li><a href="/en/cfd.html">CFDs</a></li>
-<li><a href="/en/metals.html">Metals</a></li>
-<li><a href="/en/forex.html#forex-accounts">Types of accounts</a></li>
-<li><a href="/en/trading-platform/metatrader-5.html">MT5 trading platforms</a></li>
-</ul>
-</div>
-<div class="col-xs-6 col-md-3">
-<h4>Binary options</h4>
-<div class="separator-line-thin-gray"></div>
-<ul>
-<li><a href="/en/range-of-markets.html">Range of markets</a></li>
-<li><a href="/en/types-of-accounts.html">Types of accounts</a></li>
-<li><a href="/en/trading-platform/champion-trader.html">Binary options trading platforms</a></li>
-</ul>
-</div>
-<div class="col-xs-6 col-md-3">
-<h4>Legal</h4>
-<div class="separator-line-thin-gray"></div>
-<ul>
-<li><a href="/en/terms-and-conditions.html">Terms and Conditions</a></li>
-<li><a href="/en/home.html">&nbsp;</a></li>
-</ul>
-<h4>Resources</h4>
-<div class="separator-line-thin-gray"></div>
-<ul>
-<li><a href="/en/trading-times.html">Trading Times</a></li>
-<li><a href="/en/cashier/payment-methods.html">Payment Methods</a></li>
-</ul>
-</div>
-</div>
-</div>
-<div class="col-sm-2 col-xs-12">
-<ul class="social-network">
-<li>
-<a href="https://www.facebook.com/champion.fx" target="_blank">
-<img src="/images/symbols/fb.svg" alt="">
-</a>
-</li>
-<li>
-<a href="https://twitter.com/champion_fx" target="_blank">
-<img src="/images/symbols/t.svg" alt="">
-</a>
-</li>
-<li>
-<a href="https://www.youtube.com/channel/UCBqTu-uQkmaIh5wgBswo2TA" target="_blank">
-<img src="/images/symbols/yt.svg" alt="">
-</a>
-</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div id="footer-regulatory" class="primary-color-dark">
-<div class="container">
-<div class="row">
-<div class="col-sm">
-High Risk Investment Warning: Trading foreign exchange and/or contracts for differences on margin carries a very high level of risk, and may not be suitable for all investors. There is a possibility that you could sustain a loss in excess of your deposited funds. Accordingly, you should not speculate with capital that you cannot afford to lose. Before deciding to trade the products offered via this website you should carefully consider your financial objectives, needs and level of trading experience. In particular, you should be aware of all the risks associated with trading on margin. Furthermore, Champion FX does not issue advice, recommendations or opinions in relation to acquiring, holding or disposing of any financial products, and all services are provided on an execution only basis.
-</div>
-</div>
-<div class="row">
-<div class="col-sm">
-ChampionFX is not available to residents of Afghanistan, Australia, Bosnia and Herzegovina, Costa Rica, any European Union country, Guyana, Hong Kong, Iran, Iraq, Japan, Jersey, Malaysia, North Korea, Syria, Uganda, USA, Vanuatu, and Yemen.
-</div>
-</div>
-</div>
-</div>
-<div id="footer-last" class="primary-color-dark">
-<div class="container">
-<div class="row">
-<div class="col-sm">
-&copy; 2017 Champion FX
-</div>
-</div>
-</div>
-</div>
-<div id="end_note" class="invisible hidden-xs-down"></div>
+	<div id="footer-menu" class="">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-10 col-xs-12">
+					<div class="row">
+						<div class="col-xs-6 col-md-3">
+							<h4>ChampionFX</h4>
+							<div class="separator-line-thin-gray"></div>
+							<ul>
+								<li><a href="/en/about-us.html">About</a></li>
+								<li><a href="/en/licensing.html">License</a></li>
+							</ul>
+							<h4>Partnerships</h4>
+							<div class="separator-line-thin-gray"></div>
+							<ul>
+								<li><a href="/en/partnerships-ib.html">Introducing Broker (IB)</a></li>
+								<li><a href="/en/partnerships-affiliate.html">Affiliate</a></li>
+								<li><a href="/en/partnerships-contributor.html">Content Contributor</a></li>
+							</ul>
+						</div>
+						<div class="col-xs-6 col-md-3">
+							<h4>MT5</h4>
+							<div class="separator-line-thin-gray"></div>
+							<ul>
+								<li><a href="/en/forex.html">Forex</a></li>
+								<li><a href="/en/cfd.html">CFDs</a></li>
+								<li><a href="/en/metals.html">Metals</a></li>
+								<li><a href="/en/forex.html#forex-accounts">Types of accounts</a></li>
+								<li><a href="/en/trading-platform/metatrader-5.html">MT5 trading platforms</a></li>
+							</ul>
+						</div>
+						<div class="col-xs-6 col-md-3">
+							<h4>Binary options</h4>
+							<div class="separator-line-thin-gray"></div>
+							<ul>
+								<li><a href="/en/range-of-markets.html">Range of markets</a></li>
+								<li><a href="/en/types-of-accounts.html">Types of accounts</a></li>
+								<li><a href="/en/trading-platform/champion-trader.html">Binary options trading platforms</a></li>
+							</ul>
+						</div>
+						<div class="col-xs-6 col-md-3">
+							<h4>Legal</h4>
+							<div class="separator-line-thin-gray"></div>
+							<ul>
+								<li><a href="/en/terms-and-conditions.html">Terms and Conditions</a></li>
+								<li><a href="/en/home.html">&nbsp;</a></li>
+							</ul>
+							<h4>Resources</h4>
+							<div class="separator-line-thin-gray"></div>
+							<ul>
+								<li><a href="/en/trading-times.html">Trading Times</a></li>
+								<li><a href="/en/cashier/payment-methods.html">Payment Methods</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-2 col-xs-12">
+					<ul class="social-network">
+						<li><a href="https://www.facebook.com/champion.fx" target="_blank"><img src="https://www.champion-fx.com/images/symbols/fb.svg" alt=""></a></li>
+						<li><a href="https://twitter.com/champion_fx" target="_blank"><img src="https://www.champion-fx.com/images/symbols/t.svg" alt=""></a></li>
+						<li><a href="https://www.youtube.com/channel/UCBqTu-uQkmaIh5wgBswo2TA" target="_blank"><img src="https://www.champion-fx.com/images/symbols/yt.svg" alt=""></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="footer-regulatory" class="primary-color-dark">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm">
+				High Risk Investment Warning: Trading foreign exchange and/or contracts for differences on margin carries a very high level of risk, and may not be suitable for all investors. There is a possibility that you could sustain a loss in excess of your deposited funds. Accordingly, you should not speculate with capital that you cannot afford to lose. Before deciding to trade the products offered via this website you should carefully consider your financial objectives, needs and level of trading experience. In particular, you should be aware of all the risks associated with trading on margin. Furthermore, Champion FX does not issue advice, recommendations or opinions in relation to acquiring, holding or disposing of any financial products, and all services are provided on an execution only basis.
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm">
+				ChampionFX is not available to residents of Afghanistan, Australia, Bosnia and Herzegovina, Costa Rica, any European Union country, Guyana, Hong Kong, Iran, Iraq, Japan, Jersey, Malaysia, North Korea, Syria, Uganda, USA, Vanuatu, and Yemen.
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="footer-last" class="primary-color-dark">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm">
+					&copy; 2017 Champion FX
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="end_note" class="invisible hidden-xs-down"></div>
 </footer>
 <script src="https://apis.google.com/js/platform.js" defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
