--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: compress
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-9 Main-Content" itemprop="articleBody">
+						<div class="col-md Main-Content" itemprop="articleBody">
 						<p class=""><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%d.%m.%Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
 							<div class="rte">{{ content }}</div>				
 						</div>
