--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,49 +8,49 @@
 							<h4>ChampionFX</h4>
 							<div class="separator-line-thin-gray"></div>
 							<ul>
-								<li><a href="/en/about-us.html">About</a></li>
-								<li><a href="/en/licensing.html">License</a></li>
+								<li><a href="https://www.champion-fx.com/en/about-us.html">About</a></li>
+								<li><a href="https://www.champion-fx.com/en/licensing.html">License</a></li>
 							</ul>
 							<h4>Partnerships</h4>
 							<div class="separator-line-thin-gray"></div>
 							<ul>
-								<li><a href="/en/partnerships-ib.html">Introducing Broker (IB)</a></li>
-								<li><a href="/en/partnerships-affiliate.html">Affiliate</a></li>
-								<li><a href="/en/partnerships-contributor.html">Content Contributor</a></li>
+								<li><a href="https://www.champion-fx.com/en/partnerships-ib.html">Introducing Broker (IB)</a></li>
+								<li><a href="https://www.champion-fx.com/en/partnerships-affiliate.html">Affiliate</a></li>
+								<li><a href="https://www.champion-fx.com/en/partnerships-contributor.html">Content Contributor</a></li>
 							</ul>
 						</div>
 						<div class="col-xs-6 col-md-3">
 							<h4>MT5</h4>
 							<div class="separator-line-thin-gray"></div>
 							<ul>
-								<li><a href="/en/forex.html">Forex</a></li>
-								<li><a href="/en/cfd.html">CFDs</a></li>
-								<li><a href="/en/metals.html">Metals</a></li>
-								<li><a href="/en/forex.html#forex-accounts">Types of accounts</a></li>
-								<li><a href="/en/trading-platform/metatrader-5.html">MT5 trading platforms</a></li>
+								<li><a href="https://www.champion-fx.com/en/forex.html">Forex</a></li>
+								<li><a href="https://www.champion-fx.com/en/cfd.html">CFDs</a></li>
+								<li><a href="https://www.champion-fx.com/en/metals.html">Metals</a></li>
+								<li><a href="https://www.champion-fx.com/en/forex.html#forex-accounts">Types of accounts</a></li>
+								<li><a href="https://www.champion-fx.com/en/trading-platform/metatrader-5.html">MT5 trading platforms</a></li>
 							</ul>
 						</div>
 						<div class="col-xs-6 col-md-3">
 							<h4>Binary options</h4>
 							<div class="separator-line-thin-gray"></div>
 							<ul>
-								<li><a href="/en/range-of-markets.html">Range of markets</a></li>
-								<li><a href="/en/types-of-accounts.html">Types of accounts</a></li>
-								<li><a href="/en/trading-platform/champion-trader.html">Binary options trading platforms</a></li>
+								<li><a href="https://www.champion-fx.com/en/range-of-markets.html">Range of markets</a></li>
+								<li><a href="https://www.champion-fx.com/en/types-of-accounts.html">Types of accounts</a></li>
+								<li><a href="https://www.champion-fx.com/en/trading-platform/champion-trader.html">Binary options trading platforms</a></li>
 							</ul>
 						</div>
 						<div class="col-xs-6 col-md-3">
 							<h4>Legal</h4>
 							<div class="separator-line-thin-gray"></div>
 							<ul>
-								<li><a href="/en/terms-and-conditions.html">Terms and Conditions</a></li>
-								<li><a href="/en/home.html">&nbsp;</a></li>
+								<li><a href="https://www.champion-fx.com/en/terms-and-conditions.html">Terms and Conditions</a></li>
+								<li><a href="https://www.champion-fx.com/en/home.html">&nbsp;</a></li>
 							</ul>
 							<h4>Resources</h4>
 							<div class="separator-line-thin-gray"></div>
 							<ul>
-								<li><a href="/en/trading-times.html">Trading Times</a></li>
-								<li><a href="/en/cashier/payment-methods.html">Payment Methods</a></li>
+								<li><a href="https://www.champion-fx.com/en/trading-times.html">Trading Times</a></li>
+								<li><a href="https://www.champion-fx.com/en/cashier/payment-methods.html">Payment Methods</a></li>
 							</ul>
 						</div>
 					</div>
