--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,12 +4,12 @@
 			<div class="col-sm-12 topbar-container flex-items-sm-middle">
 				<div class="topbar-contacts">
 					<ul>
-						<li class="last"><a href="/en/contact.html">Contact Us</a></li>
+						<li class="last"><a href="https://www.champion-fx.com/en/contact.html">Contact Us</a></li>
 						<li id="main-login" class="FX__Header__cta invisible"><a class="button-secondary" href="javascript:;">Log In</a></li>
 					</ul>
 				</div>
 				<div class="upgrade-message pulser invisible">
-					<a href="/en/new-account/real.html">Upgrade to a Real Account</a>
+					
 				</div>
 				<div class="invisible">
 					<div class="languages">
