--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -24,7 +24,7 @@
 .glossary-content {margin-top: 40px;}
 .glossary-tab-content {padding-left: 40px;}
 .glossary-tab-content h2 {display: inline-block; border-bottom: 1px solid #013365;}
-.glossary-title {border-right: 1px solid #DEDEDE;}
+.glossary-title {border-right: 1px solid #DEDEDE; font-weight: bold;}
 /* Video Embed */
 .video-container {position: relative;margin-top:20px;padding-bottom: 56.25%;padding-top: 30px; height: 0; overflow: hidden;}
 .video-container iframe,
