--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -21,8 +21,8 @@
 .daily-report img {display:block; margin-left:auto; margin-right:auto; margin-top:30px; max-width: 100%;}
 .daily-report ul {list-style-type: none; margin:0; padding:0;}
 .daily-report ul li {margin-left:0px; padding:0px; width:100%;}
-.glossary-tabs li {border-right: 1px solid #DEDEDE !important;}
-.glossary-tabs li .last-tab {border-right: 1px solid #ffffff !important;}
+.glossary-tabs li {border-right: 1px solid #DEDEDE;}
+.glossary-tabs li .last-tab {border-right: 1px solid #ffffff;}
 .glossary-content {margin-top: 40px;}
 .glossary-tab-content {padding-left: 40px;}
 .glossary-tab-content h2 {display: inline-block; border-bottom: 1px solid #013365;}
