--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -21,14 +21,14 @@
 .daily-report img {display:block; margin-left:auto; margin-right:auto; margin-top:30px; max-width: 100%;}
 .daily-report ul {list-style-type: none; margin:0; padding:0;}
 .daily-report ul li {margin-left:0px; padding:0px; width:100%;}
-.glossary-tabs li a{width: 100%; border-right: 1px solid #DEDEDE;}
-.glossary-tabs li .last-tab {border-right: 1px solid #ffffff;}
+.glossary-tabs li {text-align: center; padding-left: 15px!important; }
+.glossary-tabs li .last-tab {}
 .glossary-content {margin-top: 40px;}
 .glossary-tab-content {padding-left: 40px;}
 .glossary-tab-content h2 {display: inline-block; border-bottom: 1px solid #013365;}
 .glossary-title {border-right: 1px solid #DEDEDE; font-weight: bold;}
 .glossary-title h1 {font-weight: bold !important;}
-.v-border {background:url(../images/v-border.jpg) bottom right no-repeat;}
+.v-border {background:url('./images/v-border.jpg') center right no-repeat; min-height: 20px; width: 1px; display: inline-block; }
 /* Video Embed */
 .video-container {position: relative;margin-top:20px;padding-bottom: 56.25%;padding-top: 30px; height: 0; overflow: hidden;}
 .video-container iframe,
