--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -27,7 +27,7 @@
 .glossary-tab-content {padding-left: 40px;}
 .glossary-tab-content h2 {display: inline-block; border-bottom: 1px solid #013365;}
 .glossary-title {border-right: 1px solid #DEDEDE; font-weight: bold;}
-.glossary-title h1 {font-weight: bold !important;}
+.glossary-title h1 {font-weight: bold !important; font-size: 46px;}
 .v-border {background:url('./images/v-border.jpg') center right no-repeat; min-height: 20px; width: 1px; display: inline-block; }
 /* Video Embed */
 .video-container {position: relative;margin-top:20px;padding-bottom: 56.25%;padding-top: 30px; height: 0; overflow: hidden;}
