--- a/_layouts/page-contributor.html
+++ b/_layouts/page-contributor.html
@@ -13,10 +13,8 @@ layout: compress
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md Page-Grid">				
-					<div class="Page-Grid__grid-wrap">
-					    {{ content }}	
-					</div>
+				<div class="col-md">			
+					<div class="rte">{{ content }}</div>				
 				</div>
 			</div>		
 		</div>
