--- a/_layouts/page-contributor.html
+++ b/_layouts/page-contributor.html
@@ -5,19 +5,23 @@ layout: compress
 {% include lang.html %}
 <html lang="{{ siteLang }}">
   {% include head.html %}
-    {% include header.html %}	
-		<div class="container">
-			<div class="row">
-				<div class="col-md">
-				    <h1>{{ page.title }}</h1>
+    {% include header.html %}
+	<main class="page-content" aria-label="Content" id="champion-container">
+		<div class="wrapper" id="champion-content">
+			<div class="container">
+				<div class="row">
+					<div class="col-md">
+						<h1>{{ page.title }}</h1>
+					</div>
 				</div>
+				<div class="row">
+					<div class="col-md">			
+						<div class="rte">{{ content }}</div>				
+					</div>
+				</div>		
 			</div>
-			<div class="row">
-				<div class="col-md">			
-					<div class="rte">{{ content }}</div>				
-				</div>
-			</div>		
 		</div>
+	</main>	
      {% include footer.html %}  
     </body>
 </html>
