--- a/_layouts/page-grid-contributors.html
+++ b/_layouts/page-grid-contributors.html
@@ -5,21 +5,25 @@ layout: compress
 {% include lang.html %}
 <html lang="{{ siteLang }}">
   {% include head.html %}
-    {% include header.html %}	
-		<div class="container">
-			<div class="row">
-				<div class="col-md">
-				    <h1>{{ page.title }}</h1>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md Page-Grid">				
-					<div class="Page-Grid__grid-wrap">
-					    {{ content }}	
+    {% include header.html %}
+	<main class="page-content" aria-label="Content" id="champion-container">
+		<div class="wrapper" id="champion-content">
+			<div class="container">
+				<div class="row">
+					<div class="col-md">
+						<h1>{{ page.title }}</h1>
 					</div>
 				</div>
-			</div>		
+				<div class="row">
+					<div class="col-md Page-Grid">				
+						<div class="Page-Grid__grid-wrap">
+							{{ content }}	
+						</div>
+					</div>
+				</div>		
+			</div>
 		</div>
+	</main>	
      {% include footer.html %}  
     </body>
 </html>
