--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 				<div class="topbar-contacts">
 					<ul>
 						<li class="last"><a href="https://www.champion-fx.com/en/contact.html">Contact Us</a></li>
-						<li id="main-login" class="FX__Header__cta invisible"><a class="button-secondary" href="javascript:;">Log In</a></li>
+						<li id="main-login" class="FX__Header__cta "><a class="button-secondary" href="javascript:;">Log In</a></li>
 					</ul>
 				</div>
 				<div class="upgrade-message pulser invisible">
@@ -105,7 +105,7 @@
 					</li>
 				</ul>
 			</div>
-				<div id="main-signup" class="logged-out invisible hidden-lg-down">
+				<div id="main-signup" class="logged-out hidden-lg-down">
 					<ul class="signup-button">
 						<li class=""><a class="button-secondary" href="/en/home.html#signup"><span>Sign Up</span></a></li>
 					</ul>
