--- a/_includes/header.html
+++ b/_includes/header.html
@@ -71,29 +71,29 @@
 					<li class="account">
 						
 						<ul>
-							<a class="link logged-out" href="/en/home.html#signup">
+							<a class="link logged-out" href="https://www.champion-fx.com/en/home.html#signup">
 								<li>Sign Up</li>
 							</a>
 							
 							<div class="separator-line-thin-gray invisible logged-in"></div>
-							<a href="/en/about-us.html" class="hidden-lg-up">
+							<a href="https://www.champion-fx.com/en/about-us.html" class="hidden-lg-up">
 								<li>About</li>
 							</a>
 							<li class="hidden-lg-up has-sub">
 								<a href="javascript:;">MT5</a>
 									<ul class="invisible">
-										<li><a href="/en/forex.html">Forex</a></li>
-										<li><a href="/en/cfd.html">CFDs</a></li>
-										<li><a href="/en/metals.html">Metals</a></li>
+										<li><a href="https://www.champion-fx.com/en/forex.html">Forex</a></li>
+										<li><a href="https://www.champion-fx.com/en/cfd.html">CFDs</a></li>
+										<li><a href="https://www.champion-fx.com/en/metals.html">Metals</a></li>
 									</ul>
 							</li>
-							<a href="/en/binary-options.html" class="hidden-lg-up">
+							<a href="https://www.champion-fx.com/en/binary-options.html" class="hidden-lg-up">
 								<li>Binary Options</li>
 							</a>
-							<a href="/en/trading-platform.html" class="hidden-lg-up">
+							<a href="https://www.champion-fx.com/en/trading-platform.html" class="hidden-lg-up">
 								<li>Trading Platforms</li>
 							</a>
-							<a href="/en/partnerships.html" class="hidden-lg-up">
+							<a href="https://www.champion-fx.com/en/partnerships.html" class="hidden-lg-up">
 								<li>Partnerships</li>
 							</a>
 							<div class="separator-line-thin-gray hidden-lg-up invisible logged-in"></div>
@@ -113,17 +113,17 @@
 		</div>
 			<div class="col-md-7 pull-md-2 hidden-lg-down vertical-center">
 				<ul class="top-nav-menu">
-					<li><a href="/en/about-us.html" class="nav-dropdown-toggle">About</a></li>
+					<li><a href="https://www.champion-fx.com/en/about-us.html" class="nav-dropdown-toggle">About</a></li>
 					<li><a href="javascript:;" class="nav-dropdown-toggle">MT5<span class="nav-caret"></span></a>
 						<ul>
-							<li><a href="/en/forex.html">Forex</a></li>
-							<li><a href="/en/cfd.html">CFDs</a></li>
-							<li><a href="/en/metals.html">Metals</a></li>
+							<li><a href="https://www.champion-fx.com/en/forex.html">Forex</a></li>
+							<li><a href="https://www.champion-fx.com/en/cfd.html">CFDs</a></li>
+							<li><a href="https://www.champion-fx.com/en/metals.html">Metals</a></li>
 						</ul>
 					</li>
-					<li><a href="/en/binary-options.html" class="nav-dropdown-toggle">Binary Options</a></li>
-					<li><a href="/en/trading-platform.html" class="nav-dropdown-toggle">Trading Platforms</a></li>
-					<li><a href="/en/partnerships.html" class="nav-dropdown-toggle">Partnerships</a></li>
+					<li><a href="https://www.champion-fx.com/en/binary-options.html" class="nav-dropdown-toggle">Binary Options</a></li>
+					<li><a href="https://www.champion-fx.com/en/trading-platform.html" class="nav-dropdown-toggle">Trading Platforms</a></li>
+					<li><a href="https://www.champion-fx.com/en/partnerships.html" class="nav-dropdown-toggle">Partnerships</a></li>
 				</ul>
 			</div>
 		</div>
