--- a/_layouts/page-learning-center.html
+++ b/_layouts/page-learning-center.html
@@ -14,11 +14,18 @@ layout: compress
 							{% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
 						</div>
 					</div>
+					<div class="LC-main">
 					<div class="row">
-						<div class="col-md">
-							<div class="rte">{{ content }}</div>
-						</div>
-					</div>		
+						
+							<div class="col-md-3">
+									{% include sidebar/learning-resources.html %}
+							</div>
+							<div class="col-md-9">
+								<div class="LC-content">{{ content }}</div>
+					        </div>	
+						
+					</div>	
+					</div>
 				</div>
 			</div>
 		</main>	
