--- a/_includes/navs/navigation.html
+++ b/_includes/navs/navigation.html
@@ -1,11 +1,12 @@
 {% include lang.html %}
 {% assign current = page.url %}
+{% assign menusub = page.sub %}
 {% if siteLang == "en" %}
     {% assign NavLang = site.pages | where: "language", "en" %}
 	{% for page in NavLang %}
 		{% if page.tag == "main" %}	
 			{% if page.title %}
-				<li{% if page.url == current %} class="Subheader-active"{% endif %}><a href="{{ page.url | relative_url }}">{{ page.title }}</a>				
+				<li{% if page.url == current %} class="Subheader-active"{% elsif page.sub == menusub %} class="Subheader-active"{% endif %}><a href="{{ page.url | relative_url }}">{{ page.title }}</a>				
 				</li>
 			{% endif %}
 		{% endif %}
