--- a/_layouts/page-contributor.html
+++ b/_layouts/page-contributor.html
@@ -5,23 +5,30 @@ layout: compress
 {% include lang.html %}
 <html lang="{{ siteLang }}">
   {% include head.html %}
-    {% include header.html %}
-	<main class="page-content" aria-label="Content" id="champion-container">
-		<div class="wrapper" id="champion-content">
-			<div class="container">
-				<div class="row">
-					<div class="col-md">
-						<h1>{{ page.title }}</h1>
+    {% include header.html %}	
+		<main class="page-content" aria-label="Content" id="champion-container">
+			<div class="wrapper" id="champion-content">
+				<div class="container">
+					<div class="row">
+						<div class="col-md">
+							{% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
+						</div>
+					</div>
+					<div class="LC-main">
+					<div class="row">
+						
+							<div class="col-md-3">
+									{% include sidebar/contributor-list.html %}
+							</div>
+							<div class="col-md-9">
+								<div class="LC-content">{{ content }}</div>
+					        </div>	
+						
+					</div>	
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md">			
-						<div class="rte">{{ content }}</div>				
-					</div>
-				</div>		
 			</div>
-		</div>
-	</main>	
+		</main>	
      {% include footer.html %}  
     </body>
 </html>
