--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
 		<div class="row">
 			<div class="col-md-3 col-sm-6 col-xs-6 vertical-center">
 				<div class="logo-wrapper">
-					<a href="{{ site.url | relative_url }}" class="logo-parent">
+					<a href="{{ "/" | relative_url }}" class="logo-parent">
 						<div class="logo">
 							<div></div>
 						</div>
@@ -132,7 +132,7 @@
 <div class="primary-color-dark mt5-header">
 	<div class="fx-panel center-text container">
 		<h1 class="content-inverse-color">Academy</h1>
-		<p class="content-inverse-color">Welcome to the championFX Academy where you can learn to be a better trader and stay up-to-date with the latest financial trends.</p>
+		<p class="content-inverse-color">Welcome to the ChampionFX Academy where you can learn to be a better trader and stay up-to-date with the latest financial trends.</p>
 		<div class="offset-lg-4 offset-md-2">
 			<form id="verify-email-form" class="frm-verify-email">
 				<div class="row signup-box">
