--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -32,6 +32,18 @@
 @media only screen and (max-width : 580px) {
 .Page-Grid__grid-wrap__box {float: left;  position: relative; width: 100%; padding-bottom: 100%;}
 }
+/* home grid */
+.Home__grid-wrap {overflow: hidden; margin: -10px -10px;}
+.Home__grid-wrap__box {float: left;  position: relative; width: 25%; padding-bottom: 25%;}
+.Home__grid-wrap__box__boxInner {position: absolute; left: 10px; right: 10px; top: 10px; bottom: 10px; border:0px solid #dedede; padding:20px; text-align:center; background:#fff; background-repeat:no-repeat; background-size:cover; background-position:center; border: 0px solid #f2f2f2;}
+.Home__grid-wrap__box__boxInner p {}
+@media only screen and (max-width : 980px) {
+.Home__grid-wrap__box {float: left;  position: relative; width: 50%; padding-bottom: 50%;}
+}
+@media only screen and (max-width : 580px) {
+.Home__grid-wrap__box {float: left;  position: relative; width: 100%; padding-bottom: 100%;}
+}
+
 .LC-main {margin-top: 30px;}
 .LC-sidebar {border-right: 1px solid #004385; padding-right: 40px;}
 .LC-sidebar ul {list-style-type: none; margin:0; padding:0;}
@@ -58,6 +70,7 @@
 .glossary-title {border-right: 1px solid #DEDEDE; font-weight: bold;}
 .glossary-title h1 {font-weight: bold !important; font-size: 46px;}
 .v-border {background:url('./images/v-border.jpg') center right no-repeat; min-height: 20px; width: 1px; display: inline-block; }
+.v-space {margin-bottom: 30px;}
 /* Video Embed */
 .video-container {position: relative;margin-top:20px;padding-bottom: 56.25%;padding-top: 30px; height: 0; overflow: hidden;}
 .video-container iframe,
