--- a/_includes/header.html
+++ b/_includes/header.html
@@ -107,7 +107,7 @@
 			</div>
 				<div id="main-signup" class="logged-out hidden-lg-down">
 					<ul class="signup-button">
-						<li class=""><a class="button-secondary" href="https://www.champion-fx.com/en/home.html#signup"><span>Sign Up</span></a></li>
+						<li class=""><a class="button-secondary" href="https://www.champion-fx.com/en/new-account/virtual.html"><span>Sign Up</span></a></li>
 					</ul>
 				</div>
 		</div>
