--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -35,7 +35,7 @@
 /* home grid */
 .Home__grid-wrap {overflow: hidden; margin: -10px -10px;}
 .Home__grid-wrap__box {float: left;  position: relative; width: 25%; padding-bottom: 25%;}
-.Home__grid-wrap__box__boxInner {position: absolute; left: 10px; right: 10px; top: 10px; bottom: 10px; border:0px solid #dedede; padding:20px; text-align:center; background:#fff; background-repeat:no-repeat; background-size:cover; background-position:center; border: 0px solid #f2f2f2;}
+.Home__grid-wrap__box__boxInner {position: absolute; left: 10px; right: 10px; top: 10px; bottom: 10px; padding:20px; text-align:center; background:#fff; background-repeat:no-repeat; background-size:cover; background-position:center; }
 .Home__grid-wrap__box__boxInner p {}
 .LC__grid-wrap__box {float: left;  position: relative; width: 33.3%; padding-bottom: 35%;}
 .LC-Grid__grid-wrap__box__boxInner__title {position:absolute; bottom:50px;left:20px;right:20px;padding:10px 10px;}
@@ -44,7 +44,7 @@
 .LC__grid-wrap__box {float: left;  position: relative; width: 50%; padding-bottom: 50%;}
 }
 @media only screen and (max-width : 580px) {
-.Home__grid-wrap__box {float: left;  position: relative; width: 100%; padding-bottom: 100%;}
+.Home__grid-wrap__box {float: left;  position: relative; width: 100%; padding-bottom: 50%;}
 .LC__grid-wrap__box {float: left;  position: relative; width: 100%; padding-bottom: 100%;}
 }
 
@@ -75,6 +75,9 @@
 .glossary-title {border-right: 1px solid #DEDEDE; font-weight: bold;}
 .glossary-title h1 {font-weight: bold !important; font-size: 46px;}
 .v-border {background:url('./images/v-border.jpg') center right no-repeat; min-height: 20px; width: 1px; display: inline-block; }
+@media only screen and (max-width : 768px) {
+	.v-border {display: none;}
+}
 .v-space {margin-bottom: 30px;}
 /* Video Embed */
 .video-container {position: relative;margin-top:20px;padding-bottom: 56.25%;padding-top: 30px; height: 0; overflow: hidden;}
