--- a/_layouts/page-grid-contributors.html
+++ b/_layouts/page-grid-contributors.html
@@ -12,6 +12,7 @@ layout: compress
 				<div class="row">
 					<div class="col-md">
 						<h1>{{ page.title }}</h1>
+						<span class="bm-10"></span>
 					</div>
 				</div>
 				<div class="row">
