--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -79,6 +79,7 @@
 	.v-border {display: none;}
 }
 .v-space {margin-bottom: 30px;}
+.bm-10 {margin-bottom: 10px;}
 /* Video Embed */
 .video-container {position: relative;margin-top:20px;padding-bottom: 56.25%;padding-top: 30px; height: 0; overflow: hidden;}
 .video-container iframe,
