--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -80,6 +80,8 @@
 }
 .v-space {margin-bottom: 30px;}
 .bm-10 {height: 15px; display: block;}
+.cta {padding:10px; text-align: center;}
+.cta p {display: block; color: #000000; text-align: center;}
 /* Video Embed */
 .video-container {position: relative;margin-top:20px;padding-bottom: 56.25%;padding-top: 30px; height: 0; overflow: hidden;}
 .video-container iframe,
