mobile nav icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,7 +55,7 @@
 		<div class="col-md-2 push-md-7 col-sm-6 col-xs-6 vertical-center">
 			<div id="main-logout" class="hidden-lg-up">
 				<ul id="main-account" class="nav-menu main-nav">
-					<li id="mobile_menu_icon" class="logged-out vertical-center hidden-lg-up invisible"><span></span></li>
+					<li id="mobile_menu_icon" class="logged-out vertical-center hidden-lg-up "><span></span></li>
 					<li class="account logged-in invisible">
 						<a href="javascript:;">
 							<div class="main-account">
