--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -85,17 +85,6 @@
 .video-thumb:nth-child(4n) {margin-right: 0;}
 .video-thumb img {padding-bottom: 1em;}
 .video-thumb p{font-size: 14px;margin: 0;}
-
-.menu-container #mobile_menu_icon span {
-    background: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 12' width='32' height='32'%3E%3Cg fill='white'%3E%3Cpath d='M0 0h18v2h-18zM0 5h18v2h-18zM0 10h18v2h-18z'/%3E%3C/g%3E%3C/svg%3E") no-repeat;
-    width: 32px;
-    height: 32px;
-    display: inline-block;
-    margin-left: auto;
-    margin-right: 10px
-}
-
-.menu-container .menu-icon {
-    background: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 12' width='32' height='32'%3E%3Cg fill='black'%3E%3Cpath d='M0 0h18v2h-18zM0 5h18v2h-18zM0 10h18v2h-18z'/%3E%3C/g%3E%3C/svg%3E") center no-repeat;
-    height: 75px
+@media (min-width:480px) {
+    .binary-logo-text {display: inline-block!important
 }
