--- a/_includes/header.html
+++ b/_includes/header.html
@@ -133,16 +133,8 @@
 	<div class="fx-panel center-text container">
 		<h1 class="content-inverse-color">Academy</h1>
 		<p class="content-inverse-color">Welcome to the ChampionFX Academy where you can learn to be a better trader and stay up-to-date with the latest financial trends.</p>
-		<div class="offset-lg-4 offset-md-2">
-			<form id="verify-email-form" class="frm-verify-email">
-				<div class="row signup-box">
-					<div class="col">
-					<input class="clean-input secondary-input" autocomplete="off" name="email" id="email" maxlength="50" placeholder="Enter your email">
-					<button class="button" id="btn-verify-email" type="submit">Create Free Account</button>
-					<span class="error-msg hint color-white center-text invisible" id="signup_error"></span>
-					</div>
-				</div>
-			</form>
+		<p class="academy-header-cta">
+			<a class="button-secondary" href="https://www.champion-fx.com"><span>Create Free Account</span></a>
 		</div>
 	</div>
 </div>
