--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -76,6 +76,8 @@
 .bm-10 {height: 15px; display: block;}
 .cta {padding:10px; text-align: center;}
 .cta p {display: block; color: #000000; text-align: center;}
+.academy-header-cta  {margin-top: 50px;}
+.academy-header-cta span {padding:15px 30px; font-size: 18px;}
 /* Video Embed */
 .video-container {position: relative;margin-top:20px;padding-bottom: 56.25%;padding-top: 30px; height: 0; overflow: hidden;}
 .video-container iframe,
