--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,5 +21,5 @@
 	<link rel="stylesheet" href="https://style.champion-fx.com/binary.css"/>	
 	<script src="https://www.champion-fx.com/js/bundle.min.js" type="text/javascript"></script>
     <script src="https://style.champion-fx.com/binary.js" type="text/javascript"></script>	
-	<link rel="stylesheet" href="{{ "/assets/css/cfx-academy.min.css" | relative_url }}">
+	<link rel="stylesheet" href="{{ "/assets/css/cfx-academy.css" | relative_url }}">
 </head>
