--- a/_includes/navs/blog-archive.html
+++ b/_includes/navs/blog-archive.html
@@ -9,7 +9,7 @@
 						<a class="Page-List__item__title" href="{{ post.url | relative_url }}"><h2>{{ post.title }}</h2></a>
 						<p class="post--date">{{ post.date | date: "%d.%m.%Y" }}</p>
 					<p>{{ post.excerpt }}</p>	
-					<p><a href="{{ post.url | prepend: site.url }}">Read more..</a></p>
+					<p><a href="{{ post.url | relative_url }}">Read more..</a></p>
 					</div>
 				</div>	
 			</div>
@@ -25,7 +25,7 @@
 						<a class="Page-List__item__title" href="{{ post.url | relative_url }}"><h2>{{ post.title }}</h2></a>
 						<p class="post--date">{{ post.date | date: "%d.%m.%Y" }}</p>
 					<p>{{ post.excerpt }}</p>	
-					<p><a href="{{ post.url | prepend: site.url }}">Read more..</a></p>
+					<p><a href="{{ post.url | relative_url }}">Read more..</a></p>
 					</div>
 				</div>	
 			</div>
