--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -90,3 +90,6 @@
 	</div>
 	<div id="end_note" class="invisible hidden-xs-down"></div>
 </footer>
+<script src="https://apis.google.com/js/platform.js" defer></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="{{ '/assets/js/code.js' | relative_url }}" defer></script>
