--- a/_includes/navs/blog-archive.html
+++ b/_includes/navs/blog-archive.html
@@ -2,33 +2,33 @@
 {% if siteLang == "en" %}
     {% assign PostLang = site.posts | where: "language", "en" %}
 	{% for post in PostLang %}	
-		{% if post.title %}
-			<div class="row list--item">
-				<div class="col-sm-12">
-					<div class="Page-List__item__excerpt">	
-						<a class="Page-List__item__title" href="{{ post.url | relative_url }}"><h2>{{ post.title }}</h2></a>
-						<p class="post--date">{{ post.date | date: "%d.%m.%Y" }}</p>
-					<p>{{ post.excerpt }}</p>	
-					<p><a href="{{ post.url | relative_url }}">Read more..</a></p>
-					</div>
-				</div>	
-			</div>
-		{% endif %}
+		{% if post.tag == "cfx-post" %}
+		<div class="row list--item">
+			<div class="col-sm-12">
+				<div class="Page-List__item__excerpt">	
+					<a class="Page-List__item__title" href="{{ post.url | relative_url }}"><h2>{{ post.title }}</h2></a>
+					<p class="post--date">{{ post.date | date: "%d.%m.%Y" }}</p>
+				<p>{{ post.excerpt }}</p>	
+				<p><a href="{{ post.url | relative_url }}">Read more..</a></p>
+				</div>
+			</div>	
+		</div>
+	{% endif %}
 	{% endfor %}
 {% else %}
 {% assign PostLang = site.posts | where: "language", "en" %}
 	{% for post in PostLang %}	
-		{% if post.title %}
-			<div class="row list--item">
-				<div class="col-sm-12">
-					<div class="Page-List__item__excerpt">	
-						<a class="Page-List__item__title" href="{{ post.url | relative_url }}"><h2>{{ post.title }}</h2></a>
-						<p class="post--date">{{ post.date | date: "%d.%m.%Y" }}</p>
-					<p>{{ post.excerpt }}</p>	
-					<p><a href="{{ post.url | relative_url }}">Read more..</a></p>
-					</div>
-				</div>	
-			</div>
-		{% endif %}
+		{% if post.tag == "cfx-post" %}
+		<div class="row list--item">
+			<div class="col-sm-12">
+				<div class="Page-List__item__excerpt">	
+					<a class="Page-List__item__title" href="{{ post.url | relative_url }}"><h2>{{ post.title }}</h2></a>
+					<p class="post--date">{{ post.date | date: "%d.%m.%Y" }}</p>
+				<p>{{ post.excerpt }}</p>	
+				<p><a href="{{ post.url | relative_url }}">Read more..</a></p>
+				</div>
+			</div>	
+		</div>
+	{% endif %}
 	{% endfor %}
 {% endif %}
