--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 				<div class="topbar-contacts">
 					<ul>
 						<li class="last"><a href="https://www.champion-fx.com/en/contact.html">Contact Us</a></li>
-						<li id="main-login" class="FX__Header__cta "><a class="button-secondary" href="https://www.champion-fx.com">Log In</a></li>
+						<li id="main-login" class="FX__Header__cta "><a class="button-secondary" href="https://oauth.champion-fx.com/oauth2/authorize?app_id=2472&l=EN">Log In</a></li>
 					</ul>
 				</div>
 				<div class="upgrade-message pulser invisible">
@@ -134,7 +134,7 @@
 		<h1 class="content-inverse-color">Academy</h1>
 		<p class="content-inverse-color">Welcome to the ChampionFX Academy where you can learn to be a better trader and stay up-to-date with the latest financial trends.</p>
 		<p class="academy-header-cta">
-			<a class="button-secondary" href="https://www.champion-fx.com"><span>Create Free Account</span></a>
+			<a class="button-secondary" href="https://www.champion-fx.com/en/new-account/virtual.html"><span>Create Free Account</span></a>
 		</div>
 	</div>
 </div>
