--- a/_includes/header.html
+++ b/_includes/header.html
@@ -80,7 +80,7 @@
 								<li>About</li>
 							</a>
 							<li class="hidden-lg-up has-sub">
-								<a href="javascript:;">MT5 &nbsp;</a>
+								<a href="javascript:;">MT5</a>
 									<ul class="invisible">
 										<li><a href="https://www.champion-fx.com/en/forex.html">Forex</a></li>
 										<li><a href="https://www.champion-fx.com/en/cfd.html">CFDs</a></li>
@@ -114,7 +114,7 @@
 			<div class="col-md-7 pull-md-2 hidden-lg-down vertical-center">
 				<ul class="top-nav-menu">
 					<li><a href="https://www.champion-fx.com/en/about-us.html" class="nav-dropdown-toggle">About</a></li>
-					<li><a href="javascript:;" class="nav-dropdown-toggle">MT5<span class="nav-caret"></span></a>
+					<li><a href="javascript:;" class="nav-dropdown-toggle">MT5 <span class="nav-caret"></span></a>
 						<ul>
 							<li><a href="https://www.champion-fx.com/en/forex.html">Forex</a></li>
 							<li><a href="https://www.champion-fx.com/en/cfd.html">CFDs</a></li>
