--- a/_layouts/page-faq.html
+++ b/_layouts/page-faq.html
@@ -17,7 +17,7 @@ layout: compress
 					<div class="LC-main">
 					<div class="row">						
 						<div class="col-md-3">
-								{% include sidebar/learning-resources.html %}
+								{% include sidebar/faq-pages.html %}
 						</div>
 						<div class="col-md-9">
 							<div class="LC-content">{{ content }}</div>
