--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -1,88 +1,461 @@
-.Subheader {display:table; width:100%; background-color:#fff; border-bottom:1px solid #dedede; padding: 0; margin-top: 0px; margin-bottom: 20px; text-align:center;}
-.Subheader ul {list-style:none; margin:0px; padding:0; width:100%; display:block; }
-.Subheader ul li {display:inline-block; padding: 20px 0; margin: 0; border-bottom: 3px solid #fff;}
-.Subheader ul li a{ padding: 20px 30px; font-size: 14px; font-weight: 400; color: #000; }
-.Subheader ul li a:hover{ text-decoration:none;}
-.Subheader-active {border-bottom: 3px solid #013365 !important; color: #013365 !important;}
-.Subheader-active a{color: #013365 !important; font-weight: bold !important;}
-@media (max-width: 768px) {
-.Subheader ul li {display:block; margin:0px 0px; padding:6px 0px; width:100%; }
-.Subheader ul li a{width:100%;margin-left:0px;padding:7px 15px; display:block;}
+.Subheader {
+    display: table;
+    width: 100%;
+    background-color: #fff;
+    border-bottom: 1px solid #dedede;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 20px;
+    text-align: center
 }
-.fx-footer {margin-top: 20px;}
-/* Pages */
-.Page-Grid__grid-wrap {overflow: hidden; margin: -10px -10px;}
-.Page-Grid__grid-wrap p{margin: 10px 10px;}
-.Page-Grid__grid-wrap__box {float: left;  position: relative; width: 25%; padding-bottom: 25%;}
-.Page-Grid__grid-wrap__box__boxInner {position: absolute; left: 10px; right: 10px; top: 10px; bottom: 10px; border:0px solid #dedede; padding:0px; text-align:center; background:#fff; background-repeat:no-repeat; background-size:cover; background-position:center;}
-.Page-Grid__grid-wrap__box__boxInner:hover {border:0px solid #ccc;}
-.Page-Grid__grid-wrap__box__boxInner__title {font-weight:400; font-size:16px; color: #fff; position:absolute; bottom:0px;left:20px;right:20px;padding:10px 20px; background-color: #004385}
-.Page-Grid__grid-wrap__box__boxInner__vendor {display:block; float:left;position:absolute;top:25px;left:5px; right:5px; padding:0px; background:transparent; color:#444; font-size:12px; text-align:center;}
-.Page-Grid__grid-wrap__box__boxInner__vendor img {max-width:60%; height:auto; margin:0 auto;}
-.grid--date {display:block; background:#fff; font-weight:400; font-size:14px; position:absolute; bottom:-14px;left:2px; right:2px; padding:5px; z-index:999;}
-@media only screen and (max-width : 980px) {
-.Page-Grid__grid-wrap__box {float: left;  position: relative; width: 50%; padding-bottom: 50%;}
+
+.Subheader ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: block
 }
-@media only screen and (max-width : 580px) {
-.Page-Grid__grid-wrap__box {float: left;  position: relative; width: 100%; padding-bottom: 100%;}
+
+.Subheader ul li {
+    display: inline-block;
+    padding: 20px 0;
+    margin: 0;
+    border-bottom: 3px solid #fff
 }
-.LC__grid-wrap__box {float: left;  position: relative; width: 33.3%; padding-bottom: 35%;}
-.LC-Grid__grid-wrap__box__boxInner__title {position:absolute; bottom:50px;left:20px;right:20px;padding:10px 10px;}
-@media only screen and (max-width : 980px) {
-.LC__grid-wrap__box {float: left;  position: relative; width: 50%; padding-bottom: 50%;}
+
+.Subheader ul li a {
+    padding: 20px 25px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #000
 }
-@media only screen and (max-width : 580px) {
-.LC__grid-wrap__box {float: left;  position: relative; width: 100%; padding-bottom: 100%;}
+
+.Subheader ul li a:hover {
+    text-decoration: none
 }
-.LC-main {margin-top: 30px;}
-.LC-sidebar {border-right: 1px solid #004385; padding-right: 40px;}
-.LC-sidebar img {max-width: 100%; margin-bottom: 40px;}
-.LC-sidebar ul {list-style-type: none; margin:0; padding:0;}
-.LC-sidebar ul li { border-bottom:3px solid #fff; margin-left:0px; padding:5px 0px; margin:15px 0px; width:100%; }
-.LC-sidebar ul li a{font-weight:400;}
-.LC-active { border-bottom: 3px solid #013365!important; font-weight: bold;}
-.LC-content {padding-left: 20px;}
-.LC-content h1{margin-top: 15px;}
-/* Snippets */
-.img-md {width: 60%; height: auto;}
-.sidebar-date {display: block; padding-left: 20px;}
-.report-list { width:100%;}
-.rte img{max-width:100%;}
-.list-group {padding-left: 0; margin-bottom: 20px;}
-.list--item { display:block; border-bottom:1px solid #dedede; padding: 20px 0;}
-.list--item-lg { display:block; border-bottom:1px solid #dedede; padding: 40px 0;}
-.post--date{ display:block; font-weight:400; font-size:14px; color: #013365;}
-.p--action { margin-top: 30px; margin-bottom: 30px; margin-left: 0px; margin-right: 0px; text-align:center!important;}
-.daily-report img {display:block; margin-left:auto; margin-right:auto; margin-top:30px; max-width: 100%;}
-.daily-report ul {list-style-type: none; margin:0; padding:0;}
-.daily-report ul li {margin-left:0px; padding:0px; width:100%;}
-.glossary-tabs li {text-align: center; padding: 0 !important; margin: 0 !important;}
-.glossary-content {margin-top: 40px;}
-.glossary-tab-content {padding-left: 40px;}
-.glossary-tab-content h2 {display: inline-block; border-bottom: 1px solid #013365;}
-.glossary-tab-content h3 span{display: block; font-size: 14px; }
-.glossary-title {border-right: 1px solid #DEDEDE; font-weight: bold;}
-.glossary-title h1 {font-weight: bold !important; font-size: 46px;}
-.v-border {background:url('./images/v-border.jpg') center right no-repeat; min-height: 20px; width: 1px; display: inline-block; }
-@media only screen and (max-width : 768px) {
-	.v-border {display: none;}	
+
+.Subheader-active {
+    border-bottom: 3px solid #013365!important;
+    color: #013365!important
 }
-.v-space {margin-bottom: 30px;}
-.bm-10 {height: 15px; display: block;}
-.cta {padding:10px; text-align: center;}
-.cta p {display: block; color: #000000; text-align: center;}
-.academy-header-cta  {margin-top: 50px;}
-.academy-header-cta span {padding:10px 25px; font-size: 18px;}
-/* Video Embed */
-.video-container {position: relative;margin-top:20px;padding-bottom: 56.25%;padding-top: 30px; height: 0; overflow: hidden;}
+
+.Subheader-active a {
+    color: #013365!important;
+    font-weight: 700!important
+}
+
+.LC-sidebar ul li a,
+.grid--date {
+    font-weight: 400
+}
+
+@media (max-width:768px) {
+    .Subheader ul li {
+        display: block;
+        margin: 0;
+        padding: 6px 0;
+        width: 100%
+    }
+    .Subheader ul li a {
+        width: 100%;
+        margin-left: 0;
+        padding: 7px 15px;
+        display: block
+    }
+}
+
+.fx-footer {
+    margin-top: 20px
+}
+
+.Page-Grid__grid-wrap {
+    overflow: hidden;
+    margin: -10px
+}
+
+.Page-Grid__grid-wrap p {
+    margin: 10px
+}
+
+.Page-Grid__grid-wrap__box {
+    float: left;
+    position: relative;
+    width: 25%;
+    padding-bottom: 25%
+}
+
+.Page-Grid__grid-wrap__box__boxInner {
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    top: 10px;
+    bottom: 10px;
+    border: 0 solid #dedede;
+    padding: 0;
+    text-align: center;
+    background: center no-repeat #fff;
+    background-size: cover
+}
+
+.Page-Grid__grid-wrap__box__boxInner:hover {
+    border: 0 solid #ccc
+}
+
+.Page-Grid__grid-wrap__box__boxInner__title {
+    font-weight: 400;
+    font-size: 16px;
+    color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    background-color: #004385
+}
+
+.Page-Grid__grid-wrap__box__boxInner__vendor {
+    display: block;
+    float: left;
+    position: absolute;
+    top: 25px;
+    left: 5px;
+    right: 5px;
+    padding: 0;
+    background: 0 0;
+    color: #444;
+    font-size: 12px;
+    text-align: center
+}
+
+.Page-Grid__grid-wrap__box__boxInner__vendor img {
+    max-width: 60%;
+    height: auto;
+    margin: 0 auto
+}
+
+.grid--date {
+    display: block;
+    background: #fff;
+    font-size: 14px;
+    position: absolute;
+    bottom: -14px;
+    left: 2px;
+    right: 2px;
+    padding: 5px;
+    z-index: 999
+}
+
+@media only screen and (max-width:980px) {
+    .Page-Grid__grid-wrap__box {
+        float: left;
+        position: relative;
+        width: 50%;
+        padding-bottom: 50%
+    }
+}
+
+@media only screen and (max-width:580px) {
+    .Page-Grid__grid-wrap__box {
+        float: left;
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%
+    }
+}
+
+.LC__grid-wrap__box {
+    float: left;
+    position: relative;
+    width: 33.3%;
+    padding-bottom: 35%
+}
+
+.LC-Grid__grid-wrap__box__boxInner__title {
+    position: absolute;
+    bottom: 50px;
+    left: 20px;
+    right: 20px;
+    padding: 10px
+}
+
+@media only screen and (max-width:980px) {
+    .LC__grid-wrap__box {
+        float: left;
+        position: relative;
+        width: 50%;
+        padding-bottom: 50%
+    }
+}
+
+@media only screen and (max-width:580px) {
+    .LC__grid-wrap__box {
+        float: left;
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%
+    }
+}
+
+.LC-main {
+    margin-top: 30px
+}
+
+.LC-sidebar {
+    border-right: 1px solid #004385;
+    padding-right: 40px
+}
+
+.LC-sidebar img {
+    max-width: 100%;
+    margin-bottom: 40px
+}
+
+.LC-sidebar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0
+}
+
+.LC-sidebar ul li {
+    border-bottom: 3px solid #fff;
+    padding: 5px 0;
+    margin: 15px 0;
+    width: 100%
+}
+
+.LC-active {
+    border-bottom: 3px solid #013365!important;
+    font-weight: 700
+}
+
+.list--item,
+.list--item-lg {
+    border-bottom: 1px solid #dedede;
+    display: block
+}
+
+.LC-content {
+    padding-left: 20px
+}
+
+.LC-content h1 {
+    margin-top: 15px
+}
+
+.ui-tabs-nav h4 {
+    display: block;
+    margin: 20px 0 0;
+    border-top: 1px solid #f2f2f2
+}
+
+.cfx-title {
+    cursor: default!important
+}
+
+@media only screen and (max-width:768px) {
+    .LC-sidebar {
+        border-right: 0 solid #004385;
+        padding-right: 0
+    }
+    .LC-content {
+        padding-left: 0
+    }
+}
+
+.img-md {
+    width: 60%;
+    height: auto
+}
+
+.sidebar-date {
+    display: block;
+    padding-left: 20px
+}
+
+.report-list {
+    width: 100%
+}
+
+.rte img {
+    max-width: 100%
+}
+
+.list-group {
+    padding-left: 0;
+    margin-bottom: 20px
+}
+
+.list--item {
+    padding: 20px 0
+}
+
+.list--item-lg {
+    padding: 40px 0
+}
+
+.post--date {
+    display: block;
+    font-weight: 400;
+    font-size: 14px;
+    color: #013365
+}
+
+.p--action {
+    text-align: center!important;
+    margin: 30px 0
+}
+
+.cta,
+.cta p,
+.glossary-tabs li {
+    text-align: center
+}
+
+.daily-report img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    max-width: 100%
+}
+
+.daily-report ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0
+}
+
+.daily-report ul li {
+    margin-left: 0;
+    padding: 0;
+    width: 100%
+}
+
+.glossary-tabs li {
+    padding: 0!important;
+    margin: 0!important
+}
+
+.glossary-content {
+    margin-top: 40px
+}
+
+.glossary-tab-content {
+    padding-left: 40px
+}
+
+.glossary-tab-content h2 {
+    display: inline-block;
+    border-bottom: 1px solid #013365
+}
+
+.glossary-tab-content h3 span {
+    display: block;
+    font-size: 14px
+}
+
+.glossary-title {
+    border-right: 1px solid #DEDEDE;
+    font-weight: 700
+}
+
+.glossary-title h1 {
+    font-weight: 700!important;
+    font-size: 46px
+}
+
+.v-border {
+    background: url(images/v-border.jpg) center right no-repeat;
+    min-height: 20px;
+    width: 1px;
+    display: inline-block
+}
+
+@media only screen and (max-width:768px) {
+    .v-border {
+        display: none
+    }
+}
+
+.bm-10,
+.bm-20,
+.cta p {
+    display: block
+}
+
+.v-space {
+    margin-bottom: 30px
+}
+
+.bm-10 {
+    height: 15px
+}
+
+.bm-20 {
+    height: 20px
+}
+
+.cta {
+    padding: 10px
+}
+
+.cta p {
+    color: #000
+}
+
+.academy-header-cta {
+    margin-top: 50px
+}
+
+.academy-header-cta span {
+    padding: 10px 25px;
+    font-size: 18px
+}
+
+.video-container {
+    position: relative;
+    margin-top: 20px;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden
+}
+
+.video-container embed,
 .video-container iframe,
-.video-container object,
-.video-container embed {position: absolute;top: 0;left: 0;width: 100%;height: 100%; border:0;}
-.video-thumb {cursor: pointer;display: inline-block;width: 22%;margin: 4% 4% 0 0;vertical-align: top;}
-.video-thumb:nth-child(4n) {margin-right: 0;}
-.video-thumb img {padding-bottom: 1em;}
-.video-thumb p{font-size: 14px;margin: 0;}
-@media (min-width:480px) {
-    .binary-logo-text {display: inline-block!important}
+.video-container object {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0
 }
-.ui-state-disabled {}
+
+.video-thumb {
+    cursor: pointer;
+    display: inline-block;
+    width: 22%;
+    margin: 4% 4% 0 0;
+    vertical-align: top
+}
+
+.video-thumb:nth-child(4n) {
+    margin-right: 0
+}
+
+.video-thumb img {
+    padding-bottom: 1em
+}
+
+.video-thumb p {
+    font-size: 14px;
+    margin: 0
+}
+
+@media (min-width:480px) {
+    .binary-logo-text {
+        display: inline-block!important
+    }
+}
