--- a/_includes/header.html
+++ b/_includes/header.html
@@ -107,7 +107,7 @@
 			</div>
 				<div id="main-signup" class="logged-out hidden-lg-down">
 					<ul class="signup-button">
-						<li class=""><a class="button-secondary" href="https://www.champion-fx.com/en/new-account/virtual.html"><span>Sign Up</span></a></li>
+						<li class=""><a class="button-secondary" href="https://www.champion-fx.com/en/home.html#signup"><span>Sign Up</span></a></li>
 					</ul>
 				</div>
 		</div>
@@ -134,7 +134,7 @@
 		<h1 class="content-inverse-color">Academy</h1>
 		<p class="content-inverse-color">Welcome to the ChampionFX Academy where you can learn to be a better trader and stay up-to-date with the latest financial trends.</p>
 		<p class="academy-header-cta">
-			<a class="button-secondary" href="https://www.champion-fx.com/en/new-account/virtual.html"><span>Create Free Account</span></a>
+			<a class="button-secondary" href="https://www.champion-fx.com/en/home.html#signup"><span>Create Free Account</span></a>
 		</div>
 	</div>
 </div>
