meta tags gif url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="{{page.keywords}}">
 	<meta property="og:title" content="Champion-FX.com"/>
 	<meta property="og:type" content="website"/>
-	<meta property="og:image" content="{{ "/assets/images/cfx-animated-links.gif" | relative_url }}"/>
+	<meta property="og:image" content="https://academy.champion-fx.com/assets/images/cfx-animated-links.gif"/>
 	<link rel="icon" type="image/png" sizes="16x16" href="https://www.champion-fx.com/images/favicons/CFX_favicon16.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="https://www.champion-fx.com/images/favicons/CFX_favicon32.png"/>	
 	<link rel="stylesheet" href="https://www.champion-fx.com/css/style.min.css"/>
