--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,6 @@
 		<div class="row">
 			<div class="col-sm-12 topbar-container flex-items-sm-middle">
 				<div class="topbar-contacts">
-					<ul>
-						<li class="last"><a href="https://www.champion-fx.com/en/contact.html">Contact Us</a></li>
-						<li id="main-login" class="FX__Header__cta "><a class="button-secondary" href="https://oauth.champion-fx.com/oauth2/authorize?app_id=2472&l=EN">Log In</a></li>
-					</ul>
 				</div>
 				<div class="upgrade-message pulser invisible">
 					
@@ -42,7 +38,7 @@
 		<div class="row">
 			<div class="col-md-3 col-sm-6 col-xs-6 vertical-center">
 				<div class="logo-wrapper">
-					<a href="{{ "/" | relative_url }}" class="logo-parent">
+					<a href="https://www.champion-fx.com/en/home.html" class="logo-parent">
 						<div class="logo">
 							<div></div>
 						</div>
@@ -71,9 +67,7 @@
 					<li class="account">
 						
 						<ul>
-							<a class="link logged-out" href="https://www.champion-fx.com/en/home.html#signup">
-								<li>Sign Up</li>
-							</a>
+							
 							
 							<div class="separator-line-thin-gray invisible logged-in"></div>
 							<a href="https://www.champion-fx.com/en/about-us.html" class="hidden-lg-up">
@@ -106,9 +100,7 @@
 				</ul>
 			</div>
 				<div id="main-signup" class="logged-out hidden-lg-down">
-					<ul class="signup-button">
-						<li class=""><a class="button-secondary" href="https://www.champion-fx.com/en/home.html#signup"><span>Sign Up</span></a></li>
-					</ul>
+					
 				</div>
 		</div>
 			<div class="col-md-7 pull-md-2 hidden-lg-down vertical-center">
