--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,9 @@
 		<div class="row">
 			<div class="col-sm-12 topbar-container flex-items-sm-middle">
 				<div class="topbar-contacts">
+					<ul>
+						<li class="last"></li>						
+					</ul>
 				</div>
 				<div class="upgrade-message pulser invisible">
 					
