--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="topbar primary-color-dark">
+<div class="topbar primary-color-dark logged-in">
 	<div class="menu-container">
 		<div class="row">
 			<div class="col-sm-12 topbar-container flex-items-sm-middle">
