--- a/_includes/lang.html
+++ b/_includes/lang.html
@@ -9,3 +9,8 @@
 {% else %}
 {% assign siteLang = 'en' %}{% assign LangUrl = '/en/' %}
 {% endif %}
+{% assign coresource = site.github.url %}
+	{% if coresource contains "https" %}{% assign domain = site.github.url %}
+{% else %}
+	{% assign domain = site.github.url | replace: 'http', 'https' %}
+{% endif %}
