--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
 		</a>
 		<div class="navbar__nav">
 			<ul class="navbar__nav__menu">
-				<li><a href="https://www.champion-fx.com/en/about-us.html"><span class="fx-about fx"></span>About</a></li>
+				<li><a href="https://www.champion-fx.com/en/about-us.html"><span class="fx-about fx"></span>About Us</a></li>
 				<li>
 					<a class="navbar__nav__toggle" href="javascript:;">
 						<span class="fx-mt5-o fx"></span>
